--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/new_database
+spring.datasource.username=postgres
+spring.datasource.password=690
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
+#spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.mode=always
+spring.jpa.show-sql=true
 
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=100MB
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+application-description=@project.description@
+application-version=@project.version@
+logging.level.org.springframework.boot.autoconfigure=ERROR
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
+server.error.include-message=always
+server.error.include-binding-errors=always
