--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/new_database
 spring.datasource.username=postgres
 spring.datasource.password=690
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=never
 #spring.jpa.hibernate.ddl-auto=create
 #spring.sql.init.mode=always
 spring.jpa.show-sql=true
